Fix padding on mobile menu toggle

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -418,7 +418,6 @@ blockquote p {
     background: transparent;
     border: none;
     cursor: pointer;
-    padding: 8px 12px;
     z-index: 10;
     font-family: var(--font-sans);
     font-size: 1.125rem;
